# grpc_tools

demo/: Makefile  Makefile.am  Makefile.in  config.h  libtool  test  test.cpp  test2
demo/.deps/: test-msg.pb.Po  test2-test.Po
demo/autom4te.cache/: traces.1
msg.proto/: config.status  configure  configure.ac  main.cpp  msg.pb.cc  msg.pb.h  msg.proto
msg.proto/.deps/: test-main.Po  test2-msg.pb.Po
msg.proto/autom4te.cache/: output.0  output.1  traces.0
